--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.23
-spacy==2.0.3
 scikit-learn==0.21.0
 joblib==0.13.0
-nltk==3.6.5
+nltk==3.7
+numpy==1.23.0
+scipy==1.8.1
+spams-bin==2.6.4
